add a form input for images and image in the show page
Co-Authored-By: Taylor Phillips <taylorphillips133@gmail.com>

--- a/Places/Views/Home/Index.cshtml
+++ b/Places/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
 <h1>Location Diary</h1>
 <a href ="locations/new"> Add a new location</a>
-<a href ="/locations"> View Locations</a>
+<a href ="/locations"> View Locations</a><br>
 
+<img src="https://i.pinimg.com/originals/04/d5/94/04d5943df453bd03a8ef85cab52fba5d.jpg" alt="Text" />
