--- a/Places/Views/Locations/New.cshtml
+++ b/Places/Views/Locations/New.cshtml
@@ -1,5 +1,9 @@
 <form action="/locations" method="post">
   <label for="cityName">Add a new location</label>
   <input id="cityName" name="cityName" type="text" required>
+   
+  <label for="url">Add a image url</label>
+  <input id="url" name="url" type="text">
+
   <button type="submit">Submit</button>
 </form>
